==> alarin/spider/spider-servo/src/mt6701/mt6701.cpp <==
#include "mt6701.h"

#define CRC_MASK             0b000000000000000000111111
#define MFC_MASK             0b000000000000001111000000
#define MFC_STRENGTH_MASK    0b000000000000000011000000
#define ANGLE_MASK           0b111111111111110000000000

void SPISensor::begin(int8_t sck, int8_t miso, int8_t ss) {
    _csPin = ss;
    _sckPin = sck;
    _misoPin = miso;

    pinMode(_csPin, OUTPUT);
    digitalWrite(_csPin, HIGH);
    SPI.begin(_sckPin, _misoPin, _csPin);
    _spiSetup();
}

void SPISensor::_spiSetup() {
    SPI.setBitOrder(MSBFIRST);
    // SPI.setDataMode(SPI_MODE2);
    // SPI.setFrequency(1000000);
    SPI.setDataMode(SPI_MODE1);
    SPI.setFrequency(1000000);
}

uint32_t SPISensor::readData() {
  digitalWrite(_csPin, LOW);
  uint32_t val = SPI.transfer(0x00);
  val <<= 8;
  val |=  SPI.transfer(0x00);  
  val <<= 8;
  val |=  SPI.transfer(0x00);
  SPI.transfer(0xFF);  
  digitalWrite(_csPin, HIGH);
  return val;
}

bool SPISensor::isCRCValid(uint32_t raw_data) {
  uint8_t crc = 0; // Initialize CRC to 0
  uint16_t original_crc = raw_data&CRC_MASK;
  uint32_t data = raw_data >> 6;

  // Process each bit from MSB (bit 17) to LSB (bit 0)
  for (int i = 17; i >= 0; i--) {
      // Extract the current bit
      uint8_t bit = (data >> i) & 1;
      
      // Calculate feedback: XOR of CRC's MSB and current data bit
      uint8_t feedback = ((crc >> 5) & 1) ^ bit;
      
      // Shift CRC left by 1 bit
      crc = (crc << 1) & 0x3F; // Mask to 6 bits
      
      // Apply polynomial if feedback is 1
      if (feedback) {
          crc ^= 0x03; // Polynomial X⁶ + X + 1 (0x03)
      }
  }
  
  return crc == original_crc;
}

bool SPISensor::read(float *angle, mt6701_status_t *field_status, bool *button_pushed, bool *track_loss ){
  uint32_t data;
  uint8_t status;
  float _angle;

  data = readData();

  // uint32_t printVal = 0b1000000000000000000000000;
  // printVal += data;
  // Serial.print(">Raw data: ");
  // Serial.print(printVal, BIN);

  if (!isCRCValid(data)) {
    return false;
  }

  _angle = ( ((data>>10)&0x3FFF) / (float)16384.0f ) * TWO_PI;
  if(angle != NULL){
    *angle = _angle; 
  }

  status = (data >> 6) & 0b1111;

  if(field_status != NULL){
    *field_status = (mt6701_status_t) (status & 0x03);
  }

  if(button_pushed != NULL){
    if(status & 0x04){
      *button_pushed = true; 
    }else{
      *button_pushed = false;
    }
  }
  
  if(track_loss != NULL){
    if(status & 0x08){
      *track_loss = true;
    }else{
      *track_loss = false;
    }
  }

  return true;
}

bool SPISensor::getFilteredAngle(float *angle) {
  float _angle = 0;
  if (!read(&_angle, NULL, NULL, NULL)) {
    return false;
  }
  *angle = angleKF.updateEstimate(_angle);
  return true;
}
